# ot-harjoitustyo

./: .gitignore  README.md
chess-app/: .pylintrc  pyproject.toml  tasks.py
chess-app/documentaatio/: changelog.md  kayttoohje.md  työaikakirjanpito.md  vaatimusmaarittely.md
chess-app/src/: board.py  clock.py  game_loop.py  index.py  renderer.py  textfield.py
chess-app/src/tests/: board_test.py
documentaatio/: työaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
